kubernetes/dev/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: java-app
  namespace: dev
spec:
  replicas: 2
  selector:  
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: sumithsraikar/kubernetes-deployment-image:1.0
        ports:
        - containerPort: 80
