kubernetes/dev/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: java-app
  namespace: dev
spec:
  selector:
    app: java-app

  ports:
  - port: 80
    targetPort: 80
